; ModuleID = '/home/carl/AnghaBench/linux/drivers/rapidio/devices/extr_tsi721.c_tsi721_shutdown.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rapidio/devices/extr_tsi721.c_tsi721_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }
%struct.tsi721_device = type { i32 }

@EXIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"enter\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_dev*)* @tsi721_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tsi721_shutdown(%struct.pci_dev* %0) #0 {
  %2 = alloca %struct.pci_dev*, align 8
  %3 = alloca %struct.tsi721_device*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %2, align 8
  %4 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %5 = call %struct.tsi721_device* @pci_get_drvdata(%struct.pci_dev* %4)
  store %struct.tsi721_device* %5, %struct.tsi721_device** %3, align 8
  %6 = load i32, i32* @EXIT, align 4
  %7 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %8 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %7, i32 0, i32 0
  %9 = call i32 @tsi_debug(i32 %6, i32* %8, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.tsi721_device*, %struct.tsi721_device** %3, align 8
  %11 = call i32 @tsi721_disable_ints(%struct.tsi721_device* %10)
  %12 = load %struct.tsi721_device*, %struct.tsi721_device** %3, align 8
  %13 = call i32 @tsi721_dma_stop_all(%struct.tsi721_device* %12)
  %14 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %15 = call i32 @pci_clear_master(%struct.pci_dev* %14)
  %16 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %17 = call i32 @pci_disable_device(%struct.pci_dev* %16)
  ret void
}

declare dso_local %struct.tsi721_device* @pci_get_drvdata(%struct.pci_dev*) #1

declare dso_local i32 @tsi_debug(i32, i32*, i8*) #1

declare dso_local i32 @tsi721_disable_ints(%struct.tsi721_device*) #1

declare dso_local i32 @tsi721_dma_stop_all(%struct.tsi721_device*) #1

declare dso_local i32 @pci_clear_master(%struct.pci_dev*) #1

declare dso_local i32 @pci_disable_device(%struct.pci_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
